# clackbot-rs

./: Cargo.toml  README.md
firefox/: inject.js  manifest.json
migrations/: 20240430173732_create_users_table.sql
migrations/2024-05-01-190510_create_users/: down.sql  up.sql
migrations/2024-05-24-191916_create_transactions/: down.sql  up.sql
migrations/2024-05-31-185208_add_last_daily_to_users/: down.sql  up.sql
public/: index.html  results.html
src/: db.rs  http_server.rs  main.rs  models.rs  schema.rs  twitch.rs  wpm.rs
src/discord/: commands.rs  mod.rs
src/http_server/: discord.rs  error.rs  mod.rs
src/models/: mod.rs  transaction.rs  user.rs
src/twitch/: chat.rs  client.rs  events.rs  mod.rs  websocket.rs
src/twitch/types/: mod.rs  redemption.rs  reward.rs  websocket.rs
