[package]
name = "clackbot"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
dotenv = "0.15.0"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tide = "0.16.0"
tokio = { version = "1.37.0", features = ["full"] }
twitch-irc = "5.0.1"
