[package]
name = "clackbot"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
axum = "0.7.5"
dotenv = "0.15.0"
futures = "0.3.30"
futures-util = "0.3.30"
poise = "0.6.1"
regex = "1.10.4"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
sqlx = { version = "0.7", features = [ "postgres", "runtime-tokio", "tls-native-tls" ] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["full"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
tower-http = { version = "0.5.2", features = ["fs"] }
twitch-irc = "5.0.1"
url = "2.5.0"
urlencoding = "2.1.3"
